# MatchThreeTask

./: CMakeLists.txt  MatchThreeTask.pro  README.md  main.cpp  widget.cpp  widget.h
src/figure/: figure.cpp  figure.hpp  figure_generator.hpp
src/gamefield/: gamefield.cpp  gamefield.h  table.cpp  table.h
src/match_three/: match_three.cpp  match_three.h  match_three.ui
